@@ -28,7 +28,7 @@ import org.springframework.osgi.iandt.BaseIntegrationTest;
 public abstract class ServiceBaseTest extends BaseIntegrationTest {
 
 	protected String[] getTestBundlesNames() {
-		return new String[] { "org.springframework.osgi, cglib-nodep.osgi, 2.1.3-SNAPSHOT" };
+		return new String[] { "net.sourceforge.cglib, com.springsource.net.sf.cglib, 2.1.3" };
 	}
 
 	protected ServiceRegistration publishService(Object obj, String name) throws Exception {
